--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "prettier --write . --ignore-path ./.prettierignore",
+    "prettier:changed": "pretty-quick",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "18.1.0",
@@ -25,8 +28,11 @@
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
