--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-native": "0.70.1",
+    "react-native-ux-cam": "^5.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
