--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "android": "react-native run-android",
         "ios": "react-native run-ios",
         "start": "react-native start",
+        "typescript": "tsc",
         "test": "jest",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "prettier": "prettier --write . --ignore-path ./.prettierignore",
@@ -13,8 +14,12 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@react-navigation/native": "^6.0.13",
+        "@react-navigation/native-stack": "^6.9.0",
         "react": "18.1.0",
         "react-native": "0.70.1",
+        "react-native-safe-area-context": "^4.3.4",
+        "react-native-screens": "^3.17.0",
         "react-native-ux-cam": "^5.4.2"
     },
     "devDependencies": {
